<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/onboarding" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/layout_onboarding_h1_welcome"
            android:id="@+id/h1_welcome" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trackbook_icon"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/layout_onboarding_description_app_icon"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/layout_onboarding_h2_app_name"
                    android:id="@+id/h2_app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/layout_onboarding_p_app_claim"
                    android:id="@+id/p_app_claim" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/layout_onboarding_h2_request_permissions"
            android:id="@+id/h2_request_permissions"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:text="@string/layout_onboarding_h3_permission_location"
            android:id="@+id/h3_permission_location"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/layout_onboarding_p_permission_location"
            android:id="@+id/p_permission_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:text="@string/layout_onboarding_h3_permission_storage"
            android:id="@+id/h3_permission_storage"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/layout_onboarding_p_permission_storage"
            android:id="@+id/p_permission_storage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/trackbook_blue"
            android:textColor="@color/trackbook_white"
            android:text="@string/layout_onboarding_button_okay"
            android:id="@+id/button_okay"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>

</ScrollView>


