<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityMapFragment">


    <!-- MAP VIEW -->
    <org.osmdroid.views.MapView
        android:id="@+id/track_map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <!-- BOTTOM SHEET -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/statistic_sheet"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:clipToPadding="true"
        android:background="@color/trackbook_grey_85percent"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="@android:style/TextAppearance.Large.Inverse"
                android:textStyle="bold"
                android:text="@string/statistics_sheet_h1_statistics"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/statistics_sheet_p_distance"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
                <TextView
                    android:id="@+id/statistics_data_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_sheet_p_default_data"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/statistics_sheet_p_steps"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
                <TextView
                    android:id="@+id/statistics_data_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_sheet_p_default_data"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/statistics_sheet_p_waypoints"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
                <TextView
                    android:id="@+id/statistics_data_waypoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_sheet_p_default_data"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/statistics_sheet_p_duration"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
                <TextView
                    android:id="@+id/statistics_data_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_sheet_p_default_data"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/statistics_sheet_p_recording_start"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
                <TextView
                    android:id="@+id/statistics_data_recording_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_sheet_p_default_data"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/statistics_sheet_p_recording_stop"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
                <TextView
                    android:id="@+id/statistics_data_recording_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_sheet_p_default_data"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>